added sql pool promise. fixing jwt expiresin error

--- a/config/config.env
+++ b/config/config.env
@@ -1,2 +1,12 @@
 PORT = 3000
 NODE_ENV = development
+
+DB_HOST = localhost
+DB_USER = root
+DB_PASSWORD = M0hr7YsmC1smNubf
+DB_DATABASE = abckanban
+
+JWT_SECRET = somethingreallylongthattheyusetoencryptourthing
+JWT_EXPIRY = 7d
+
+COOKIE_EXPIRY = 7d
