fixed jwt payload, cookie expiry error, pool closed error, jwt expiry error, login controller error, req.user error. log in and edit working

--- a/config/config.env
+++ b/config/config.env
@@ -9,4 +9,4 @@ DB_DATABASE = abckanban
 JWT_SECRET = somethingreallylongthattheyusetoencryptourthing
 JWT_EXPIRY = 7d
 
-COOKIE_EXPIRY = 7d
+COOKIE_EXPIRY = 7
